--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "motion": "^12.23.12",
     "next": "15.4.6",
     "next-sanity": "^10.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
